- Refactor CSS styles in quiz.css to improve readability and consistency. - Update quiz.js to fix display issues and improve user experience.

--- a/src/css/quiz.css
+++ b/src/css/quiz.css
@@ -17,9 +17,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #ffffff;
-  margin: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   color: rgba(0, 255, 34, 0.404);
 }
 html,
@@ -64,56 +62,59 @@ footer {
   align-items: center;
 }
 
-
 .quiz {
-
   display: flex;
-    background-color: var(--primary-color-red);
-    background-color: rgb(40, 44, 38);
-    width: 800px;
-    height: 260px;
-    padding: 36px;
-    border-radius: 18px;
-    border: 4px solid var(--accent-color-bronze);
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-    flex-direction: column;
+  background-color: var(--primary-color-red);
+  background-color: rgb(40, 44, 38);
+  width: 800px;
+  min-height: 260px;
+  padding: 36px;
+  border-radius: 18px;
+  border: 4px solid var(--accent-color-bronze);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  flex-direction: column;
 
-    align-items: center;
-    gap: 28px;
+  align-items: center;
+  gap: 28px;
 }
 
-
-.quiz__question-box{
-    height: 60px;
+.quiz__question-box {
+  height: 60px;
 }
 
 .quiz__form {
-    display: grid;
-    grid-template-columns: 12px 1fr;
-    column-gap: 8px;
+  display: grid;
+  grid-template-columns: 12px 1fr;
+  column-gap: 8px;
 }
 
-.quiz__intro, .results {
-  
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 36px;
+.quiz__label {
+  cursor: pointer;
+}
+
+.quiz__intro,
+.results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 36px;
 }
 
 .button {
-    background-color: var(--accent-color-yellow);
-    color: var(--primary-color-black);
-    padding: 12px 24px;
-    border: none;
-    border-radius: 6px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  background-color: var(--accent-color-yellow);
+  color: var(--primary-color-black);
+  padding: 12px 24px;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .button--submit {
-    grid-column: span 2;
-    justify-self: center;
-    width: 33%;
+  grid-column: span 2;
+  justify-self: center;
+  margin-top: 28px;
 }
